Fix image path for deployment

--- a/index.html
+++ b/index.html
@@ -56,8 +56,7 @@
 
         <section class="news-body">
             <div class="news-image">
-                <img src="/Users/felix/.gemini/antigravity/brain/8a72547f-e6a2-440d-b45c-4c9d6bc48b84/uploaded_image_1768457395289.jpg"
-                    alt="Local Real Estate Update">
+                <img src="main-image.jpg" alt="Local Real Estate Update">
             </div>
 
             <p class="news-brief-text">
