Update personalization: capitalize fallback and add city URL macro support

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Market News: Q1 Cash Offers whitelisted in your area</title>
+    <title>Market News: Q1 Cash Offers whitelisted in Your Area</title>
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -43,7 +43,7 @@
 
     <main class="news-container">
         <section class="article-header">
-            <h1 class="news-headline">Investors Are Paying CASH For Homes In <span class="dynamic-city">your area</span>
+            <h1 class="news-headline">Investors Are Paying CASH For Homes In <span class="dynamic-city">Your Area</span>
             </h1>
             <p class="news-subheadline">Takes Just 60 Seconds Using Their Tool To See How Much Cash Your Home Qualifies
                 For</p>
@@ -71,7 +71,7 @@
             </div>
 
             <div class="news-urgency">
-                <p>Status: <strong>Active</strong> in <span class="dynamic-city">your area</span>. <br> Available Slots:
+                <p>Status: <strong>Active</strong> in <span class="dynamic-city">Your Area</span>. <br> Available Slots:
                     <strong>11</strong>
                 </p>
             </div>
