Fix social proof images for deployment

--- a/index.html
+++ b/index.html
@@ -114,8 +114,7 @@
 
                 <div class="testimonial-card">
                     <div class="t-header">
-                        <img src="/Users/felix/.gemini/antigravity/brain/8a72547f-e6a2-440d-b45c-4c9d6bc48b84/testimonial_user_1_1768457508182.png"
-                            alt="Sarah H." class="t-avatar">
+                        <img src="t1.png" alt="Sarah H." class="t-avatar">
                         <div class="t-info">
                             <span class="t-name">Sarah H.</span>
                             <span class="t-location">Verified Seller in Austin</span>
@@ -129,8 +128,7 @@
 
                 <div class="testimonial-card">
                     <div class="t-header">
-                        <img src="/Users/felix/.gemini/antigravity/brain/8a72547f-e6a2-440d-b45c-4c9d6bc48b84/testimonial_user_2_1768457523352.png"
-                            alt="Mark T." class="t-avatar">
+                        <img src="t2.png" alt="Mark T." class="t-avatar">
                         <div class="t-info">
                             <span class="t-name">Mark T.</span>
                             <span class="t-location">Verified Seller in Orlando</span>
@@ -144,8 +142,7 @@
 
                 <div class="testimonial-card">
                     <div class="t-header">
-                        <img src="/Users/felix/.gemini/antigravity/brain/8a72547f-e6a2-440d-b45c-4c9d6bc48b84/testimonial_user_3_1768457537884.png"
-                            alt="The Millers" class="t-avatar">
+                        <img src="t3.png" alt="The Millers" class="t-avatar">
                         <div class="t-info">
                             <span class="t-name">The Millers</span>
                             <span class="t-location">Verified Sellers in Phoenix</span>
