Add scarcity mechanism with animated progress bar

--- a/index.html
+++ b/index.html
@@ -76,6 +76,28 @@
                 </p>
             </div>
 
+            <!-- Scarcity Mechanism -->
+            <div class="scarcity-bar-container">
+                <p class="scarcity-title">⚠️ ATTENTION: Spots are almost filled.</p>
+                <div class="scarcity-bar">
+                    <div class="scarcity-slot filled"></div>
+                    <div class="scarcity-slot filled"></div>
+                    <div class="scarcity-slot filled"></div>
+                    <div class="scarcity-slot filled"></div>
+                    <div class="scarcity-slot filled"></div>
+                    <div class="scarcity-slot filled"></div>
+                    <div class="scarcity-slot filled"></div>
+                    <div class="scarcity-slot filled"></div>
+                    <div class="scarcity-slot filled"></div>
+                    <div class="scarcity-slot filled"></div>
+                    <div class="scarcity-slot filled"></div>
+                    <div class="scarcity-slot filled"></div>
+                    <div class="scarcity-slot filled blink"></div>
+                    <div class="scarcity-slot empty"></div>
+                    <div class="scarcity-slot empty"></div>
+                </div>
+            </div>
+
             <!-- Social Proof: As Seen On -->
             <div class="as-seen-on">
                 <p class="section-label">AS NEWSCASTED ON</p>
