Add high-impact dynamic deadline banner (4-hour countdown)

--- a/index.html
+++ b/index.html
@@ -42,6 +42,9 @@
     </header>
 
     <main class="news-container">
+        <div class="deadline-banner" id="deadline-banner">
+            Cash Offers End For <span class="dynamic-city">Your Area</span> At <span id="deadline-time">...</span> Today
+        </div>
         <section class="article-header">
             <h1 class="news-headline">Investors Are Paying CASH For Homes In <span class="dynamic-city">Your Area</span>
             </h1>
@@ -74,28 +77,6 @@
                 <p>Status: <strong>Active</strong> in <span class="dynamic-city">Your Area</span>. <br> Available Slots:
                     <strong>11</strong>
                 </p>
-            </div>
-
-            <!-- Scarcity Mechanism -->
-            <div class="scarcity-bar-container">
-                <p class="scarcity-title">⚠️ ATTENTION: Spots are almost filled.</p>
-                <div class="scarcity-bar">
-                    <div class="scarcity-slot filled"></div>
-                    <div class="scarcity-slot filled"></div>
-                    <div class="scarcity-slot filled"></div>
-                    <div class="scarcity-slot filled"></div>
-                    <div class="scarcity-slot filled"></div>
-                    <div class="scarcity-slot filled"></div>
-                    <div class="scarcity-slot filled"></div>
-                    <div class="scarcity-slot filled"></div>
-                    <div class="scarcity-slot filled"></div>
-                    <div class="scarcity-slot filled"></div>
-                    <div class="scarcity-slot filled"></div>
-                    <div class="scarcity-slot filled"></div>
-                    <div class="scarcity-slot filled blink"></div>
-                    <div class="scarcity-slot empty"></div>
-                    <div class="scarcity-slot empty"></div>
-                </div>
             </div>
 
             <!-- Social Proof: As Seen On -->
