--- a/index.html
+++ b/index.html
@@ -43,17 +43,17 @@
 
     <main class="news-container">
         <div class="deadline-banner" id="deadline-banner">
-            Cash Offers End For <span class="dynamic-city">Your Area</span> At <span id="deadline-time">...</span> Today
+            CASH HOME AVAILABLE IN <span class="dynamic-city">Your Area</span>
         </div>
         <section class="article-header">
             <h1 class="news-headline">Investors Are Paying CASH For Homes In <span class="dynamic-city">Your Area</span>
             </h1>
-            <p class="news-subheadline">Takes Just 60 Seconds Using Their Tool To See How Much Cash Your Home Qualifies
-                For</p>
+            <p class="news-subheadline">Takes Only A Few Moments Using Their Website To See How Much Cash Your Home
+                Qualifies For</p>
 
             <div class="cta-wrapper atf">
                 <a href="https://axetrk.com/cf/click" class="news-cta-button">Check Your Address &raquo;</a>
-                <p class="news-cta-hint">Free Cash Valuation • Immediate Qualification</p>
+                <p class="news-cta-hint">Free Cash Valuation</p>
             </div>
         </section>
 
@@ -79,33 +79,7 @@
                 </p>
             </div>
 
-            <!-- Social Proof: As Seen On -->
-            <div class="as-seen-on">
-                <p class="section-label">AS NEWSCASTED ON</p>
-                <div class="logo-strip">
-                    <span class="logo-placeholder">CNN Business</span>
-                    <span class="logo-placeholder">Fox Business</span>
-                    <span class="logo-placeholder">Forbes</span>
-                    <span class="logo-placeholder">MSNBC</span>
-                    <span class="logo-placeholder">MarketWatch</span>
-                </div>
-            </div>
 
-            <!-- Social Proof: Stats -->
-            <div class="trust-stats">
-                <div class="stat-box">
-                    <span class="stat-number">$4.2B+</span>
-                    <span class="stat-label">Capital Deployed</span>
-                </div>
-                <div class="stat-box">
-                    <span class="stat-number">12,400+</span>
-                    <span class="stat-label">Homes Purchased</span>
-                </div>
-                <div class="stat-box">
-                    <span class="stat-number">4.9/5</span>
-                    <span class="stat-label">User Rating</span>
-                </div>
-            </div>
 
             <div class="cta-wrapper middle-cta">
                 <a href="https://axetrk.com/cf/click" class="news-cta-button pulse">Check Your Eligibility &raquo;</a>
@@ -124,7 +98,7 @@
                             <div class="t-stars">★★★★★</div>
                         </div>
                     </div>
-                    <p class="t-text">"I was skeptical about a 'cash offer' app, but I needed to sell my mom's house
+                    <p class="t-text">"I was skeptical about the investors, but I needed to sell my mom's house
                         fast. They offered a fair price AS-IS and we closed in 10 days. No repairs, no cleaning, no
                         hassle. Truly life-changing."</p>
                 </div>
