Remove available slots

--- a/index.html
+++ b/index.html
@@ -74,9 +74,7 @@
             </div>
 
             <div class="news-urgency">
-                <p>Status: <strong>Active</strong> in <span class="dynamic-city">Your Area</span>. <br> Available Slots:
-                    <strong>11</strong>
-                </p>
+                <p>Status: <strong>Active</strong> in <span class="dynamic-city">Your Area</span>.</p>
             </div>
 
 
