Update landing page and deploy changes

--- a/lander-1/index.html
+++ b/lander-1/index.html
@@ -48,8 +48,8 @@
         <section class="article-header">
             <h1 class="news-headline">Investors Are Paying CASH For Homes In <span class="dynamic-city">Your Area</span>
             </h1>
-            <p class="news-subheadline">Takes Only A Few Moments Using Their Website To See How Much Cash Your Home
-                Qualifies For</p>
+            <p class="news-subheadline">Takes Only A Few Moments Using Their Website To Request A Cash Offer On Your
+                Home</p>
 
             <div class="cta-wrapper atf">
                 <a href="https://axetrk.com/cf/click" class="news-cta-button">Check Your Address &raquo;</a>
