Refine UI, branding, and add NZ localization

--- a/lander-1/index.html
+++ b/lander-1/index.html
@@ -46,13 +46,13 @@
             CASH FOR HOMES AVAILABLE IN <span class="dynamic-city">Your Area</span>
         </div>
         <section class="article-header">
-            <h1 class="news-headline">Investors Are Paying CASH For Homes In <span class="dynamic-city">Your Area</span>
+            <h1 class="news-headline">Get A Free Cash Offer On Your Home In <span class="dynamic-city">Your Area</span>
             </h1>
-            <p class="news-subheadline">Takes Only A Few Moments Using Their Website To Request A Cash Offer On Your
+            <p class="news-subheadline">Takes Only A Few Moments Using This Website To Request A Cash Offer On Your
                 Home</p>
 
             <div class="cta-wrapper atf">
-                <a href="https://axetrk.com/cf/click" class="news-cta-button">Check Your Address &raquo;</a>
+                <a href="https://axetrk.com/cf/click" class="news-cta-button">Get My Cash Offer &raquo;</a>
                 <p class="news-cta-hint">Free Cash Valuation</p>
             </div>
         </section>
